--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -231,6 +231,36 @@
                         <% } %>
                 </div>
 
+                <!-- Pagination Controls -->
+<div class="d-flex justify-content-center mt-4">
+  <nav>
+    <ul class="pagination">
+      <% if (page > 1) { %>
+        <li class="page-item">
+          <a class="page-link" href="?page=<%= page - 1 %>">Previous</a>
+        </li>
+      <% } else { %>
+        <li class="page-item disabled"><span class="page-link">Previous</span></li>
+      <% } %>
+
+      <% for (let i = 1; i <= totalPages; i++) { %>
+        <li class="page-item <%= i === page ? 'active' : '' %>">
+          <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+        </li>
+      <% } %>
+
+      <% if (page < totalPages) { %>
+        <li class="page-item">
+          <a class="page-link" href="?page=<%= page + 1 %>">Next</a>
+        </li>
+      <% } else { %>
+        <li class="page-item disabled"><span class="page-link">Next</span></li>
+      <% } %>
+    </ul>
+  </nav>
+</div>
+
+
                 <!-- Add to Wallet Modal -->
                 <div class="modal fade" id="addToWalletModal" tabindex="-1" aria-labelledby="addToWalletModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
