--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -41,7 +41,7 @@
                         <div class="content-wrapper col-md-7">
                           <div class="categories my-3">100% trustable</div>
                           <h3 class="display-4">“Glow Naturally. Shine Beautifully.”</h3>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim massa diam elementum.
+                          <p>Because You Deserve to Feel Beautiful Every Day..!!
                           </p>
                           <a href="/allProducts"
                             class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1 px-4 py-3 mt-3">Shop
